--- a/systemspringboot/systemcommon/pom.xml
+++ b/systemspringboot/systemcommon/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>spring-jdbc</artifactId>
             <version>4.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
